--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="./styles.scss">
+    <link rel="stylesheet" href="./scss/styles.scss">
 
   </head>
   <body class="mat-typography">
