--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,11 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="./scss/styles.scss">
+    <link rel="stylesheet" href="./src/scss/styles.scss">
 
   </head>
   <body class="mat-typography">
+    
     <app-root></app-root>
   </body>
 </html>
